examples/todomvc/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todomvc-ns
  labels:
    app: todomvc
