examples/todomvc/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todomvc-deployment
  namespace: todomvc-ns
  labels:
    app: todomvc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todomvc
  template:
    metadata:
      labels:
        app: todomvc
    spec:
      containers:
        - name: todomvc
          image: kakalik/todomvc-app
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: todomvc-service
  namespace: todomvc-ns
spec:
  selector:
    app: todomvc
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
  type: ClusterIP
