examples/todomvc/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todomvc-service
  namespace: todomvc-ns
spec:
  selector:
    app: todomvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
